--- a/styles.css
+++ b/styles.css
@@ -101,17 +101,18 @@ input:focus {
   left: 55%;
   width: 16.2%;
   height: 5.5%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-size: clamp(10px, 2vw, 13px);
   text-align: center;
   color: rgb(174, 215, 86);
   background: rgb(43, 58, 82);
   pointer-events: none;
   line-height: 150%;
-  border-radius:4px;
+  border-radius: 4px;
   word-break: break-all;
-  pointer-events: none;
-  line-height: 150%;
-  border-radius:4px;
   border: 2px solid black;
-  word-break: break-all;
 }
