--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ input:focus {
   font-size: clamp(20px, 2vw, 25px);
   text-align: center;
   border: 2px solid black;
+  border-bottom: 4px solid black;
   border-radius: 4px;
   color: rgb(174, 215, 86);
   background: rgb(43, 58, 82);
